--- a/config/database.yml
+++ b/config/database.yml
@@ -20,7 +20,7 @@ development:
   database: reddit_on_rails_development
   pool: 5
   username: reddit_on_rails
-  password:
+  password: test1234
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
